http://jira.jboss.org/jira/browse/RF-3875 - Plus sign, title and navigation align were fixed

--- a/userguide/en/src/main/resources/css/html.css
+++ b/userguide/en/src/main/resources/css/html.css
@@ -7,6 +7,11 @@
     cursor:pointer;
 }
 
+.toc dl dt span.chapter{
+	margin: 0px 0px 0px 20px;
+	padding: 0px;
+}
+
 body {
 background-image:url(../images/community/bkg_gradient.gif);
 background-repeat:repeat-x;
@@ -38,7 +43,7 @@ th, td {
 #title, ul.docnav{
 	margin:0 auto;
 	width:1000px;
-
+	margin-left:0px;
 }
 
 /* Center all images and Figure/Table titles */
